--- a/page-one.html
+++ b/page-one.html
@@ -4,9 +4,84 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page One</title>
+  <title>The Scrappy Times</title>
+  <link rel="stylesheet" href="./style-page-one.css">
 </head>
 <body>
-  
+
+  <div class="navigation-bar">
+    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Scrappy Times</a></div>
+    <div class="nav-el-box"><a href="./page-two.html" target="_blank" class="navigation-elements">Article 1</a></div>
+    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Article 2</a></div>
+    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Article 3</a></div>
+    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Extra</a></div>
+  </div>
+
+  <div class="publication-body">
+
+    <div class="publication-title" id="title-container">
+      <h1 id="the-scrappy">the Scrappy</h1>
+      <h2 id="times">TIMES</h2></h1>
+    </div>
+
+    <div class="cover-story">
+
+      <div class="cover-photo">
+        <img src="./Isla-Vista-Roommate.jpeg" alt="cover photo" id="cover-photo">
+      </div>
+
+      <div class="article-one-tease">
+        <a id="article-one-title" href="./page-two.html">
+          <h4 id="iv-roommate-title">What kind of Isla Vista roommate are you?</h4>
+        </a>
+        <h6>By Jason Greenberg</h6>
+        <p id="iv-roommate-desc">Did you just move to Isla Vista? Are you still figuring out housemate roles and responsibilities? Save some time by taking this quick quiz to find out exactly who you will be to your new live-in friends:</p>
+          <div class="bounce" id="quiz-hook">
+            <a href="./Screen Shot 2022-09-19 at 7.34.43 PM.jpeg" target="_blank" id="quiz-hook">
+              Click here to take the quiz!
+            </a>
+          </div>
+      </div>
+
+    </div>
+
+    <div class="article-previews">
+
+      <div class="article-two-tease" class="article-tease">
+        <a href="./page-two.html" target="_blank">
+          <h4 class="tease-title">The 6 Types of Silence You Hear in North Hall English</h4>
+        </a>
+        <h6>By Jason Greenberg</h6>
+        <p class="tease-desc">Uncomfortable silence comes in many forms at UCSB, </p>
+        <ol>
+          <li>
+            The pregnant pause
+          </li>
+        </ol>
+        <p class="tease-desc" id="article-two-tease-desc-p-two">The pregnant pause is a several-second long space in an especially passionate TA’s words, so well-timed and dramatically pleasing, that it is described by many as resembling the sensation of being “knocked up.” The crowning anticipation one feels while hanging on to these fleeting moments strengthens the desire to carry this silence-baby to term<a href="./page-two.html" target="_blank">...more</a></p>
+      </div>
+
+      <img src="./english-class.png" alt="article two photo" id="article-two-photo">
+
+      <div class="article-three-tease" class="article-tease">
+        <a href="./page-three.html" target="_blank">
+          <h4 class="tease-title">9 places at UCSB to mope around feeling sexually frustrated</h4>
+        </a>
+        <h6>By Jason Greenberg</h6>
+        <p class="tease-desc">It’s been 6 long months since you felt the touch of another Gaucho. The Black Sheep has compiled a list of places to find solace in these troubling times.</p>
+        <p class="tease-desc">Squeeze your eyes shut and pinch the bridge of your nose tightly as you exhale deeply and reflect on how helpless your situation is. It’s as if you go to steal a tangerine from inside the dining commons, but every time you approach the basket<a href="./page-three.html" target="_blank">...more</a></p>      </div>
+
+      <img src="./Screen Shot 2022-09-19 at 7.34.43 PM.jpeg" alt="article three photo" id="article-three-photo">
+
+    </div>
+
+  </div>
+
+  <div class="advertisement">
+    <h5 id="disclaimer">TEXT AD</h5>
+    <p id="body-align">INVISALIGN FOR YOUR ENTIRE BODY!</p>
+    <p id="call-now">CALL 1-800-NEW-YOU🫵</p>
+  </div>
+
 </body>
 </html>
