--- a/page-one.html
+++ b/page-one.html
@@ -10,10 +10,10 @@
 <body>
 
   <div class="navigation-bar">
-    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Scrappy Times</a></div>
+    <div class="nav-el-box"><a href="./page-one.html" class="navigation-elements">Scrappy Times</a></div>
     <div class="nav-el-box"><a href="./page-two.html" target="_blank" class="navigation-elements">Article 1</a></div>
-    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Article 2</a></div>
-    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Article 3</a></div>
+    <div class="nav-el-box"><a href="./page-three.html" target="_blank" class="navigation-elements">Article 2</a></div>
+    <div class="nav-el-box"><a href="./page-four.html" target="_blank" class="navigation-elements">Article 3</a></div>
     <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Extra</a></div>
   </div>
 
@@ -32,7 +32,7 @@
 
       <div class="article-one-tease">
         <a id="article-one-title" href="./page-two.html">
-          <h4 id="iv-roommate-title">What kind of Isla Vista roommate are you?</h4>
+          <h4 id="iv-roommate-title">Which kind of Isla Vista roommate are you?</h4>
         </a>
         <h6>By Jason Greenberg</h6>
         <p id="iv-roommate-desc">Did you just move to Isla Vista? Are you still figuring out housemate roles and responsibilities? Save some time by taking this quick quiz to find out exactly who you will be to your new live-in friends:</p>
@@ -68,7 +68,7 @@
           <h4 class="tease-title">9 places at UCSB to mope around feeling sexually frustrated</h4>
         </a>
         <h6>By Jason Greenberg</h6>
-        <p class="tease-desc">It’s been 6 long months since you felt the touch of another Gaucho. The Black Sheep has compiled a list of places to find solace in these troubling times.</p>
+        <p class="tease-desc">It’s been 6 long months since you felt the touch of another Gaucho. The Scrappy Times has compiled a list of places to find solace in these troubling times.</p>
         <p class="tease-desc">Squeeze your eyes shut and pinch the bridge of your nose tightly as you exhale deeply and reflect on how helpless your situation is. It’s as if you go to steal a tangerine from inside the dining commons, but every time you approach the basket<a href="./page-three.html" target="_blank">...more</a></p>      </div>
 
       <img src="./Screen Shot 2022-09-19 at 7.34.43 PM.jpeg" alt="article three photo" id="article-three-photo">
