added page three content and stylesheet

--- a/page-three.html
+++ b/page-three.html
@@ -4,9 +4,94 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Three</title>
+  <title>The 6 Types of Silence</title>
+  <link rel="stylesheet" href="./style-page-three.css">
 </head>
 <body>
   
+  <div class="navigation-bar">
+    <div class="nav-el-box"><a href="./page-one.html" class="navigation-elements">Scrappy Times</a></div>
+    <div class="nav-el-box"><a href="./page-two.html" class="navigation-elements">Article 1</a></div>
+    <div class="nav-el-box"><a href="./page-three.html" target="_blank" class="navigation-elements">Article 2</a></div>
+    <div class="nav-el-box"><a href="./page-four.html" target="_blank" class="navigation-elements">Article 3</a></div>
+    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Extra</a></div>
+  </div>
+
+  <div class="publication-body">
+
+    <div class="publication-title" id="title-container">
+      <h1 id="the-scrappy">the Scrappy</h1>
+      <h2 id="times">TIMES</h2></h1>
+    </div>
+
+    <div class="main-photo-container">
+      <img src="./english-class.png" alt="silent classroom" id="main-photo">
+    </div>
+
+    <div class="article-heading">
+      <h3 id="article-title">The 6 Types of Silence You Hear in North Hall English</h3>
+      <h6 id="byline">By Jason Greenberg</h6>
+    </div>
+
+    <div class="sections">
+
+      <div class="section" id="sec-1">
+        <p class="subheading">1. &ensp; The pregnant pause</p>
+        <p class="content">
+          The pregnant pause is a several-second long space in an especially passionate TA’s words, so well-timed and dramatically pleasing, that it is described by many as resembling the sensation of being “knocked up.”
+          The crowning anticipation one feels while hanging on to these fleeting moments strengthens the desire to carry this silence-baby to term, because the delivery of the TA’s next words will make the long 9-second pregnancy worth all the tears, self-doubt, and emotional turmoil you experience along with your loyal seatmate.
+        </p>
+      </div>
+
+      <div class="section" id="sec-2">
+        <p class="subheading">2. &ensp; The desperate is-that-a-rhetorical-question hesitation</p>
+        <p class="content">
+          <i>Does she want us to answer that?</i>,
+          thought every English student as Lecturer Kassner asked how many windows there were in Manhattan.
+          The hesitation of every student on the cusp of answering but thinking better of it produces an eerily noiseless room, where a break in the sound could make one appear foolish or eager beaver-esque.
+          <i>Is she factoring in buses, subways, and cars in her estimate?</i>
+        </p>
+      </div>
+
+      <div class="section" id="sec-3">
+        <p class="subheading">3. &ensp; The silent awe of total agreement</p>
+        <p class="content">
+          In wake of the perfect analysis of why the author included details of his thinning hair in a think-piece about the statue of David, there can be no rebuttal as there is simply nothing left to say.
+          The silence following a profoundly reasonable explanation by the course instructor leaves only a sea of pursed lips and nodding heads.
+          There are instances where a second opinion is superfluous, as indicated by this complete silence. 
+        </p>
+      </div>
+
+      <div class="section" id="sec-4">
+        <p class="subheading">4. &ensp; The hushed tension of "nobody did the reading"</p>
+        <p class="content">
+          The classic question, “What did the two articles from last night’s reading have in common?”
+          typically ushers forth a painfully long hush—the result of twenty-five guilty jaws clamped shut.
+          Eyes move side-to-side as it slowly dawns on everyone that every student decided to take a hit of Nyquil at 7:00pm and grab some sweet REM sleep instead of reading about “woke misogyny.”
+        </p>
+      </div>
+
+      <div class="section" id="sec-5">
+        <p class="subheading">5. &ensp; The still refusal to be a smarty know-it-all like Olivia</p>
+        <p class="content">
+          If I say something, will everyone think I’m a smarty know-it-all like Olivia?, drifts through the minds of all Gauchos in attendance.
+          Independent thought is dangerous enough in your own head.
+          The fear of vocalizing such heresy is the star of this quiet dish.
+        </p>
+      </div>
+
+      <div class="section" id="sec-6">
+        <p class="subheading">6. &ensp; The respectful quiet of <i>Ferris Bueller’s Day Off</i> fans</p>
+        <p class="content">
+          “Anyone?... Anyone?” echoes soundlessly through Room 1109 as the dead eyes of twenty-five students stare numbly at the black board.
+          This rare but respectful quiet is heard wherever there is a high density of Ferris Bueller fans who know that life moves pretty fast.
+          Reenacting the boredom of teen extras in Ben Stein’s well known teaching scene from <i>Ferris Bueller’s Day Off</i> is one activity fans do to remind themselves that if they don’t stop and look around once in a while, they could miss it.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+
 </body>
 </html>
