added page four with stylesheet. Made stylesheet adjustments to rest of site for uniformity.

--- a/page-four.html
+++ b/page-four.html
@@ -4,9 +4,138 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Four</title>
+  <title>9 places at UCSB to mope around</title>
+  <link rel="stylesheet" href="./style-page-four.css">
 </head>
 <body>
   
+  <div class="navigation-bar">
+    <div class="nav-el-box"><a href="./page-one.html" class="navigation-elements">Scrappy Times</a></div>
+    <div class="nav-el-box"><a href="./page-two.html" class="navigation-elements">Article 1</a></div>
+    <div class="nav-el-box"><a href="./page-three.html" class="navigation-elements">Article 2</a></div>
+    <div class="nav-el-box"><a href="./page-four.html" class="navigation-elements">Article 3</a></div>
+    <div class="nav-el-box"><a href="http://endless.horse/" target="_blank" class="navigation-elements">Extra</a></div>
+  </div>
+
+  <div class="publication-body">
+
+    <div class="publication-title" id="title-container">
+      <h1 id="the-scrappy">the Scrappy</h1>
+      <h2 id="times">TIMES</h2></h1>
+    </div>
+
+    <div class="article-heading">
+      <h3 id="article-title">9 places at UCSB to mope around feeling sexually frustrated
+      </h3>
+      <h6 id="byline">By Jason Greenberg</h6>
+    </div>
+
+    <div class="sections">
+
+      <div class="section" id="sec-1">
+        <div class="section-photo">
+          <img src="./9-places-images/DLG-outdoor-seating.png" alt="DLG outdoor seating">
+        </div>
+        <p class="subheading">9. &ensp; The quiet emptiness of DLG’s outdoor seating</p>
+        <p class="content">
+          Squeeze your eyes shut and pinch the bridge of your nose tightly as you exhale deeply and reflect on how helpless your situation is.
+          It’s as if you go to steal a tangerine from inside the dining commons, but every time you approach the basket, it empties.
+          For six relentless months.
+          Why didn’t you go to that party, Tim?
+        </p>
+      </div>
+
+      <div class="section" id="sec-2">
+        <div class="section-photo">
+          <img src="./9-places-images/Cheadle-hall-advising.png" alt="cheadle hall advising">
+        </div>
+        <p class="subheading">8. &ensp; Waiting for academic advising in Cheadle Hall</p>
+        <p class="content">
+          Did you know they won’t help you transfer to another school?
+          Think about whether administration is actually invested in your success outside UCSB as you feel your thoughts of anguish drift into your unconscious mind where they can only harm you in your dreams.
+        </p>
+      </div>
+
+      <div class="section" id="sec-3">
+        <div class="section-photo">
+          <img src="./9-places-images/Santa-cruz-dorm.png" alt="santa cruz dorm">
+        </div>
+        <p class="subheading">7. &ensp; The white sands of the volleyball court outside Santa Cruz</p>
+        <p class="content">
+          Rest your tush in the soft sand as you slowly peel back the label of your water bottle until just the sticky part is left and gets on your fingers.
+          Wash your hands inside and avoid looking in the mirror because your self-esteem is lower than a hog’s chin on market day.
+        </p>
+      </div>
+
+      <div class="section" id="sec-4">
+        <div class="section-photo">
+          <img src="./9-places-images/Invisible-flame.png" alt="invisible flame behind library">
+        </div>
+        <p class="subheading">6. &ensp; The mysterious Invisible Flame behind the library</p>
+        <p class="content">
+          You are sure to be distracted from pangs of despair from deep within by this strange new commemorative flame that burns a clear jet 24 hours a day.
+          Recently installed on UCSB’s campus, this remembrance is located in a high-traffic area and attracts sexually frustrated students like moths to a very safe flame.
+        </p>
+      </div>
+
+      <div class="section" id="sec-5">
+        <div class="section-photo">
+          <img src="./9-places-images/Buchanan-hall.png" alt="buchanan hall benches">
+        </div>
+        <p class="subheading">5. &ensp; The long wooden benches outside Buchanan</p>
+        <p class="content">
+          The occasional frustratee may find comfort in the solitary benches outside Buchanan lecture hall while they try not to think of metaphors that describe their situation perfectly.
+          “It’s like a gadfly that keeps driving you onward, stinging and never letting you rest,” says Alec Barr to anyone who will listen.
+        </p>
+      </div>
+
+      <div class="section" id="sec-6">
+        <div class="section-photo">
+          <img src="./9-places-images/UCSB-main-library-entrance.png" alt="UCSB mkain library entrance">
+        </div>
+        <p class="subheading">4. &ensp; The tufted benches just inside the main library entrance</p>
+        <p class="content">
+          Push down your sorrows on a plush, probably genuine leather bench near the entrance of Davidson. Consider why you came all this way to sit on something without a backrest.
+          Seriously, why does anyone use these?
+      </div>
+
+      <div class="section" id="sec-7">
+        <div class="section-photo">
+          <img src="./9-places-images/Ucen-picnic-table.png" alt="ucen picnic table">
+        </div>
+        <p class="subheading">3. &ensp; This bench in front of the UCen</p>
+        <p class="content">
+          As the Counting Crows cover of Big Yellow Taxi so wisely notes: “you don’t know what you got ‘till it’s gone.”
+          Hear this line reverberate in your head as you watch people who don’t understand your burning desire to procreate go inside to pick up their mail.
+        </p>
+      </div>
+
+      <div class="section" id="sec-8">
+        <div class="section-photo">
+          <img src="./9-places-images/Theater-1-building.png" alt="large stuffed bear behind theater 1">
+        </div>
+        <p class="subheading">2. &ensp; Cuddled up to an abandoned bear at the Haplan Theater loading dock</p>
+        <p class="content">
+          Philosophy 103 stresses that fuzziness cures all ailments and inanimate objects make excellent listeners.
+          Try explaining where it all went wrong to this friendly-looking prop that looks like he just wanted a little California sunshine.
+        </p>
+      </div>
+
+      <div class="section" id="sec-9">
+        <div class="section-photo">
+          <img src="./9-places-images/Pardall-tunnell.png" alt="pardall tunnel">
+        </div>
+        <p class="subheading">1. &ensp; Meandering through Pardall tunnel</p>
+        <p class="content">
+          Feel the weight of your failure to achieve your evolutionary purpose lift from your backpack-ladened shoulders as each strip of LEDs flickers on and off with your passing. So what if you can’t get no relief?
+          Walking through this fancy tunnel is better than trying to get your rocks off anyway.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+
+
 </body>
 </html>
