--- a/page-one.html
+++ b/page-one.html
@@ -11,10 +11,10 @@
 
   <div class="navigation-bar">
     <div class="nav-el-box"><a href="./page-one.html" class="navigation-elements">Scrappy Times</a></div>
-    <div class="nav-el-box"><a href="./page-two.html" target="_blank" class="navigation-elements">Article 1</a></div>
-    <div class="nav-el-box"><a href="./page-three.html" target="_blank" class="navigation-elements">Article 2</a></div>
-    <div class="nav-el-box"><a href="./page-four.html" target="_blank" class="navigation-elements">Article 3</a></div>
-    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Extra</a></div>
+    <div class="nav-el-box"><a href="./page-two.html" class="navigation-elements">Article 1</a></div>
+    <div class="nav-el-box"><a href="./page-three.html" class="navigation-elements">Article 2</a></div>
+    <div class="nav-el-box"><a href="./page-four.html" class="navigation-elements">Article 3</a></div>
+    <div class="nav-el-box"><a href="http://endless.horse/" target="_blank" class="navigation-elements">Extra</a></div>
   </div>
 
   <div class="publication-body">
@@ -71,7 +71,7 @@
         <p class="tease-desc">It’s been 6 long months since you felt the touch of another Gaucho. The Scrappy Times has compiled a list of places to find solace in these troubling times.</p>
         <p class="tease-desc">Squeeze your eyes shut and pinch the bridge of your nose tightly as you exhale deeply and reflect on how helpless your situation is. It’s as if you go to steal a tangerine from inside the dining commons, but every time you approach the basket<a href="./page-three.html" target="_blank">...more</a></p>      </div>
 
-      <img src="./Screen Shot 2022-09-19 at 7.34.43 PM.jpeg" alt="article three photo" id="article-three-photo">
+      <img src="./9-places-images/Theater-1-building.png" alt="article three photo" id="article-three-photo">
 
     </div>
 
