--- a/page-three.html
+++ b/page-three.html
@@ -12,9 +12,9 @@
   <div class="navigation-bar">
     <div class="nav-el-box"><a href="./page-one.html" class="navigation-elements">Scrappy Times</a></div>
     <div class="nav-el-box"><a href="./page-two.html" class="navigation-elements">Article 1</a></div>
-    <div class="nav-el-box"><a href="./page-three.html" target="_blank" class="navigation-elements">Article 2</a></div>
-    <div class="nav-el-box"><a href="./page-four.html" target="_blank" class="navigation-elements">Article 3</a></div>
-    <div class="nav-el-box"><a href="#" target="_blank" class="navigation-elements">Extra</a></div>
+    <div class="nav-el-box"><a href="./page-three.html" class="navigation-elements">Article 2</a></div>
+    <div class="nav-el-box"><a href="./page-four.html" class="navigation-elements">Article 3</a></div>
+    <div class="nav-el-box"><a href="http://endless.horse/" target="_blank" class="navigation-elements">Extra</a></div>
   </div>
 
   <div class="publication-body">
@@ -25,7 +25,7 @@
     </div>
 
     <div class="main-photo-container">
-      <img src="./english-class.png" alt="silent classroom" id="main-photo">
+      <img src="./english-class-expanded.png" alt="silent classroom" id="main-photo">
     </div>
 
     <div class="article-heading">
