--- a/page-two.html
+++ b/page-two.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="navigation-bar">
-    <div class="nav-el-box"><a href="./page-one.html" class="navigation-elements">Scrappy Times</a></div>
+    <div class="nav-el-box"><a href="./index.html" class="navigation-elements">Scrappy Times</a></div>
     <div class="nav-el-box"><a href="./page-two.html" class="navigation-elements">Article 1</a></div>
     <div class="nav-el-box"><a href="./page-three.html" class="navigation-elements">Article 2</a></div>
     <div class="nav-el-box"><a href="./page-four.html" class="navigation-elements">Article 3</a></div>
