fixed broken links, navigation bar styling fixes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h6>By Jason Greenberg</h6>
         <p id="iv-roommate-desc">Did you just move to Isla Vista? Are you still figuring out housemate roles and responsibilities? Save some time by taking this quick quiz to find out exactly who you will be to your new live-in friends:</p>
           <div class="bounce" id="quiz-hook">
-            <a href="./Screen Shot 2022-09-19 at 7.34.43 PM.jpeg" target="_blank" id="quiz-hook">
+            <a href="./page-two.html" id="quiz-hook">
               Click here to take the quiz!
             </a>
           </div>
@@ -48,7 +48,7 @@
     <div class="article-previews">
 
       <div class="article-two-tease" class="article-tease">
-        <a href="./page-two.html" target="_blank">
+        <a href="./page-three.html">
           <h4 class="tease-title">The 6 Types of Silence You Hear in North Hall English</h4>
         </a>
         <h6>By Jason Greenberg</h6>
@@ -58,18 +58,18 @@
             The pregnant pause
           </li>
         </ol>
-        <p class="tease-desc" id="article-two-tease-desc-p-two">The pregnant pause is a several-second long space in an especially passionate TA’s words, so well-timed and dramatically pleasing, that it is described by many as resembling the sensation of being “knocked up.” The crowning anticipation one feels while hanging on to these fleeting moments strengthens the desire to carry this silence-baby to term<a href="./page-two.html" target="_blank">...more</a></p>
+        <p class="tease-desc" id="article-two-tease-desc-p-two">The pregnant pause is a several-second long space in an especially passionate TA’s words, so well-timed and dramatically pleasing, that it is described by many as resembling the sensation of being “knocked up.” The crowning anticipation one feels while hanging on to these fleeting moments strengthens the desire to carry this silence-baby to term<a href="./page-three.html">...more</a></p>
       </div>
 
       <img src="./english-class.png" alt="article two photo" id="article-two-photo">
 
       <div class="article-three-tease" class="article-tease">
-        <a href="./page-three.html" target="_blank">
+        <a href="./page-four.html">
           <h4 class="tease-title">9 places at UCSB to mope around feeling sexually frustrated</h4>
         </a>
         <h6>By Jason Greenberg</h6>
         <p class="tease-desc">It’s been 6 long months since you felt the touch of another Gaucho. The Scrappy Times has compiled a list of places to find solace in these troubling times.</p>
-        <p class="tease-desc">Squeeze your eyes shut and pinch the bridge of your nose tightly as you exhale deeply and reflect on how helpless your situation is. It’s as if you go to steal a tangerine from inside the dining commons, but every time you approach the basket<a href="./page-three.html" target="_blank">...more</a></p>      </div>
+        <p class="tease-desc">Squeeze your eyes shut and pinch the bridge of your nose tightly as you exhale deeply and reflect on how helpless your situation is. It’s as if you go to steal a tangerine from inside the dining commons, but every time you approach the basket<a href="./page-four.html">...more</a></p>      </div>
 
       <img src="./9-places-images/Theater-1-building.png" alt="article three photo" id="article-three-photo">
 
